--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "all-ui",
-  "version": "1.0.0",
+  "name": "reactui-circle",
+  "version": "1.2.3",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,8 +16,10 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.74",
+    "@types/react-icons": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "rollup": "^4.14.0",
     "tslib": "^2.6.2"
   }
