--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
-
     "compilerOptions": {
         "target": "ES2020",
         "module": "ESNext",
         "declaration": true,
         "declarationDir": "dist",
         "strict": true,
-        "jsx": "react"
+        "jsx": "react",
+        "moduleResolution": "Node"
+      
     }
 }
