--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactui-circle",
-  "version": "1.2.8",
+  "version": "1.3.10",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "rollup": "^4.14.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.6.2"
   }
 }
