--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactui-circle",
-  "version": "1.3.13",
+  "version": "1.4.14",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,5 +23,8 @@
     "rollup": "^4.14.0",
     "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.6.2"
+  },
+  "dependencies": {
+    "swiper": "^11.1.1"
   }
 }
